# Muttkalendar

./: .gitignore  Makefile.am  README.md  configure.ac  flake.nix  pkg.nix  things.txt
demo/: hiragana.ics
scripts/: valgrind.sh
src/: main.c
src/display/: display.c  display.h
src/parser/: parser.c  parser.h
src/parser/modules/: alarm.c  alarm.h  event.c  event.h
src/parser/modules/utils/: keys.h  list.c  list.h  utils.c  utils.h
